# cs430-proj3-illumination

./: CMakeLists.txt  README.md  brandon.json  spotlight.json  test_scene.json
include/: base.h  illumination.h  json.h  ppmrw.h  raycaster.h  vector_math.h
src/: illumination.c  json.c  main.c  ppmrw.c  raycaster.c
